# venus

./: .editorconfig  .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  README_en.md  TODO.md  config.json  config.toml
.github/workflows/: rust.yml
config/: config.json
scripts/: download-core.py
src/: error.rs  main.rs
src/core/: mod.rs
src/middlewares/: mod.rs
src/routes/: mod.rs  version.rs
src/utils/: mod.rs
venus/: Cargo.toml
venus-core/: Cargo.toml  README.md  build.rs
venus-core/src/: error.rs  lib.rs  message.rs
venus-core/src/config/: error.rs  mod.rs  types.rs
venus-core/src/grpc/: error.rs  stats.rs
venus-ui/: Cargo.toml  README.md  Trunk.toml  bun.lockb  index.html  package.json  tailwind.config.js
venus-ui/public/: styles.css
venus-ui/src/: api.rs  consts.rs  layout.rs  lib.rs  main.rs
venus-ui/src/components/: button.rs  counter_btn.rs  dark_mode_btn.rs  errors.rs  mod.rs  notifications.rs  sidebar.rs  subscription_card.rs  title.rs
venus-ui/src/components/home_page/: mod.rs  subscripiton.rs
venus-ui/src/hooks/: mod.rs
venus-ui/src/pages/: about.rs  dashboard.rs  editor.rs  home.rs  logging.rs  login.rs  mod.rs  proxies.rs  register.rs  settings.rs
venus-ui/src/utils/: mod.rs
venus/src/: consts.rs  error.rs  main.rs
venus/src/core/: mod.rs
venus/src/middlewares/: mod.rs
venus/src/routes/: mod.rs  proxies.rs  stats.rs  user.rs  version.rs
venus/src/utils/: jwt.rs  mod.rs  password.rs  validator.rs
