[workspace]
members = ["venus", "venus-core", "venus-ui"]
resolver = "2"

[profile.release]
lto = true
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# opt-level = "s"   # Optimize for binary size
strip = true # Remove debug symbols
