cargo-features = ["profile-rustflags", "trim-paths"]

[workspace]
members = ["venus", "venus-core", "venus-ui"]
resolver = "2"

[profile.dev]
incremental = true          # Compile your binary in smaller steps.
rustflags = ["-Zthreads=8"] # Better compile performance.

[profile.release]
codegen-units = 1                                                           # Allows LLVM to perform better optimization.
lto = true                                                                  # Enables link-time-optimizations.
opt-level = 3                                                               # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"                                                             # Higher performance by disabling panic handlers.
strip = true                                                                # Ensures debug symbols are removed.
trim-paths = "all"                                                          # Removes potentially privileged information from your binaries.
rustflags = ["-Cdebuginfo=0", "-C", "target-cpu=native", "-Z", "threads=8"]

[profile.ui]
inherits = "release"
opt-level = "s"
rustflags = [
    "-Cdebuginfo=0",
    "-Z",
    "threads=8",
    "--cfg",
    'getrandom_backend="wasm_js"',
]
