[package]
name = "venus-ui"
version = "0.1.0"
edition = "2021"
authors = ["xfy <xfyxfy@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7", features = ["nightly"] }
leptos-use = "0.15.3"
console_log = "1"
log = "0.4.25"
console_error_panic_hook = "0.1"
gloo = "0.11.0"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = "1.0.135"
rand = "0.8.5"
send_wrapper = { version = "0.6.0", features = ["futures"] }
web-sys = { version = "0.3.77", features = ["Document", "Window"] }
anyhow = "1.0.95"

# utils
# strum = { version = "0.25", features = ["derive", "strum_macros"] }
# strum_macros = "0.25"

[dev-dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-test = "0.3.50"
