[package]
name = "venus"
version = "0.1.4"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
# core
# venus-core = { git = "https://github.com/VOD-Venus/venus-core" }
venus-core = { path = "../venus-core" }
# server
axum = "0.7.7"
tokio = { version = "1.40.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
# error
anyhow = "1.0.89"
thiserror = "1.0.64"
# tools
toml = "0.8.19"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.128" }
serde_repr = "0.1.19"
serde_with = { version = "3.11.0", features = ["time_0_3"] }
dotenvy = "0.15.7"
# password
argon2 = "0.5.3"
rand = "0.8.5"
validator = { version = "0.18.1", features = ["derive"] }
jsonwebtoken = "9.3.0"

[dev-dependencies]
