[package]
name = "venus"
version = "0.1.4"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
# core
# venus-core = { git = "https://github.com/VOD-Venus/venus-core" }
venus-core = { path = "../venus-core" }
# server
axum = { version = "0.7.9", features = ["macros"] }
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# error
anyhow = "1.0.94"
thiserror = "2.0.6"
# tools
toml = "0.8.19"
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.133" }
serde_repr = "0.1.19"
serde_with = { version = "3.11.0", features = ["time_0_3"] }
dotenvy = "0.15.7"
# password
argon2 = "0.5.3"
rand = "0.8.5"
validator = { version = "0.19.0", features = ["derive"] }
jsonwebtoken = "9.3.0"
chrono = "0.4.39"
axum-extra = { version = "0.9.6", features = ["typed-header"] }

[dev-dependencies]
