[package]
name = "venus"
version = "0.1.4"
edition = "2021"

[dependencies]
# core
# venus-core = { git = "https://github.com/VOD-Venus/venus-core" }
venus-core = { path = "../venus-core" }
# server
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# error
anyhow = "1.0.95"
thiserror = "2.0.11"
# tools
toml = "0.8.20"
serde = { version = "1.0.217", features = ["derive", "serde_derive"] }
serde_json = { version = "1.0.138" }
serde_repr = "0.1.19"
serde_with = { version = "3.12.0", features = ["time_0_3"] }
dotenvy = "0.15.7"
# password
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
regex = "1.11.1"
jsonwebtoken = "9.3.1"
chrono = "0.4.39"
fastrand = "2.3.0"
rand = "0.9.0"

[dev-dependencies]
